Eclipse resource filters
From buildship eclipse bug report 495799.

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -91,6 +91,7 @@ libraries += [
         jcip: "net.jcip:jcip-annotations:1.0@jar",
         junit: 'junit:junit:4.12@jar',
         xmlunit: 'xmlunit:xmlunit:1.3',
+        equalsVerifier: 'nl.jqno.equalsverifier:equalsverifier:2.1.6',
         nekohtml: 'net.sourceforge.nekohtml:nekohtml:1.9.14',
         xbean: 'org.apache.xbean:xbean-reflect:3.4@jar', //required by maven3 classes
         nativePlatform: 'net.rubygrapefruit:native-platform:0.13',
