--- a/subprojects/ide/ide.gradle
+++ b/subprojects/ide/ide.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile libraries.inject
 
     testCompile libraries.xmlunit
+    testCompile libraries.equalsVerifier
     testCompile project(':dependencyManagement')
 
 }
